fix main to avoid overlapping

--- a/assets/pawtucket/css/theme.css
+++ b/assets/pawtucket/css/theme.css
@@ -2041,7 +2041,15 @@ body.frontContainer #footer {
 }
 
 
+#main {
+	padding-bottom: 100px;
+}
+
 /* About pages styles */
+
+.about {
+	padding-bottom: 100px;
+}
 
 .no-gutters {
 	margin-right: 0px;
